[package]
name = "free-piano-midi"
version = "0.1.0"
authors = ["ahaoboy <504595380@qq.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
midly = "0.5"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
